# oscarch

./: .gitignore  README.md
cmake_base_project/: CMakeLists.txt  build-run-unix.sh
cmake_base_project/include/utilities/math/: MathUtilities.h
cmake_base_project/src/: main.cpp
cmake_base_project/src/utilities/math/: MathUtilities.cpp
cpp_intro1/: CMakeLists.txt  build-run-unix.sh  build-run-win-msys2.sh
cpp_intro1/include/: myFunctions.h
cpp_intro1/src/: main.cpp
cpp_oo_intro/: CMakeLists.txt  build-run-unix.sh  build-run-win-msys2.sh
cpp_oo_intro/include/animals/: Animal.h
cpp_oo_intro/include/exceptions/: FoodException.h
cpp_oo_intro/src/: main.cpp
cpp_oo_intro/src/animals/: Giraffe.cpp  Lion.cpp
cpp_oo_intro/src/animals/birds/: Bird.cpp  Penguin.cpp
libclient/: CMakeLists.txt  build-run-unix.sh  build-run-win-msys2.sh
memory_mgnt/: build-run-unix.sh  build-run-win-msys2.sh
student_finding_example/: CMakeLists.txt  build-run-unix.sh  build-run-win-msys2.sh
student_finding_example/include/: Student.h
student_finding_example/src/: Student.cpp  main.cpp
